--- a/app/src/main/res/layout/activity_posts_list.xml
+++ b/app/src/main/res/layout/activity_posts_list.xml
@@ -5,9 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
-    <!--tools:context="com.awoisoak.visor.presentation.PostsListActivity"-->
+    >
+    <!--tools:context="com.awoisoak.visor.presentation.postlist.PostsListActivity"-->
     <!--android:fitsSystemWindows="true"-->
+    <ProgressBar
+        android:id="@+id/post_list_progress_bar"
+        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center"
+        />
+    <!--android:layout_marginBottom="@dimen/spacing_normal"-->
 
 
     <android.support.design.widget.AppBarLayout
@@ -18,30 +26,61 @@
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:layout_height="20dp"
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|snap"
             >
 
-
-            <ImageView
-                android:id="@+id/posts_list_logo"
-                android:layout_width="240dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center_horizontal"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo"
-                />
-            <!--app:layout_behavior=""-->
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/posts_list_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"
-                app:layout_collapseMode="pin"
-                android:background="@null"
-                app:layout_anchor="@id/post_list_app_bar_layout"
-                />
         </android.support.design.widget.CollapsingToolbarLayout>
+        <ImageView
+            android:id="@+id/posts_list_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:scaleType="fitCenter"
+            app:layout_scrollFlags="scroll"
+            android:src="@drawable/map_visited_countries"
+            />
+
+        <!--app:layout_behavior=""-->
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/posts_list_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            app:layout_anchor="@id/post_list_app_bar_layout"
+            app:layout_collapseMode="pin"
+            app:layout_scrollFlags="scroll">
+
+            <TextView
+                android:id="@+id/posts_list_logo2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:gravity="center_horizontal"
+                android:text="Never Stop Travelling"
+                android:textSize="30sp"
+                />
+
+
+        </android.support.v7.widget.Toolbar>
+
+
+        <ImageView
+            android:id="@+id/posts_list_logo"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_vertical|center"
+            android:adjustViewBounds="true"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/logo"
+            />
+
         <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
         <!--app:layout_anchor=""-->
 
@@ -56,9 +95,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/posts_list_recycler"
             android:layout_width="match_parent"
-            android:clipToPadding="false"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:clipToPadding="false"
             tools:listitem="@layout/item_post"
             >
         </android.support.v7.widget.RecyclerView>
