--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,24 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:contextClickable="true"
     android:layout_height="200dp"
-    >
+    android:layout_width="match_parent"
+    android:textAlignment="center"
+   >
     <!--android:foreground="?attr/selectableItemBackground"-->
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
 
-        <ImageView
-            android:id="@+id/item_post_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-           />
-        <!--android:adjustViewBounds="true" trying to fix the aspect ratio-->
-    </FrameLayout>
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical">-->
+
+    <TextView
+        android:elevation="10dp"
+        android:id="@+id/item_post_title"
+        android:layout_gravity="bottom|center"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="default text!"
+        android:textColor="@color/white"
+        android:fontFamily="casual"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        />
+
+    <ImageView
+        android:id="@+id/item_post_image"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:scaleType="centerCrop"
+        />
+    <!--android:adjustViewBounds="true" trying to fix the aspect ratio-->
+
+
+    <!--</LinearLayout>-->
+
+    <!--android:layout_marginBottom="@dime"-->
 
 
 </android.support.v7.widget.CardView>
+
+
