--- a/app/src/main/res/layout/activity_post_gallery.xml
+++ b/app/src/main/res/layout/activity_post_gallery.xml
@@ -1,68 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<!--<android.support.design.widget.CoordinatorLayout-->
+<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--xmlns:tools="http://schemas.android.com/tools"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--&gt;-->
+<!--tools:context="com.awoisoak.visor.presentation.postlist.PostsListActivity"-->
+<!--android:fitsSystemWindows="true"-->
+
+<RelativeLayout
+    android:id="@+id/post_gallery_relative_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-    <!--tools:context="com.awoisoak.visor.presentation.postlist.PostsListActivity"-->
-    <!--android:fitsSystemWindows="true"-->
+    tools:context="com.awoisoak.visor.presentation.postlist.PostsListActivity">
+
+
     <ProgressBar
         android:id="@+id/post_gallery_progress_bar"
         style="?android:attr/progressBarPadding"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginTop="60dp"
         android:layout_gravity="center"
+        android:layout_marginTop="60dp"
         />
     <!--style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"-->
 
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/post_gallery_app_bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/post_gallery_app_bar_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|snap"
-            >
+        <!--&lt;!&ndash;<android.support.design.widget.CollapsingToolbarLayout&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:layout_height="20dp"&ndash;&gt;-->
+        <!--&lt;!&ndash;android:fitsSystemWindows="true"&ndash;&gt;-->
+        <!--&lt;!&ndash;app:layout_scrollFlags="scroll|snap"&ndash;&gt;-->
+        <!--&lt;!&ndash;&gt;&ndash;&gt;-->
 
-        </android.support.design.widget.CollapsingToolbarLayout>
-        <ImageView
-            android:id="@+id/post_gallery_map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:scaleType="fitCenter"
-            app:layout_scrollFlags="scroll"
-            android:src="@drawable/map_visited_countries"
-            />
+        <!--&lt;!&ndash;</android.support.design.widget.CollapsingToolbarLayout>&ndash;&gt;-->
+        <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
+            <!--&lt;!&ndash;android:id="@+id/post_gallery_map"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:adjustViewBounds="true"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:paddingBottom="5dp"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:paddingTop="5dp"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:scaleType="fitCenter"&ndash;&gt;-->
+            <!--&lt;!&ndash;android:src="@drawable/map_visited_countries"&ndash;&gt;-->
+            <!--&lt;!&ndash;/>&ndash;&gt;-->
+        <!--&lt;!&ndash;app:layout_scrollFlags="scroll"&ndash;&gt;-->
 
-    </android.support.design.widget.AppBarLayout>
+
+    <!--</android.support.design.widget.AppBarLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="horizontal"
+        >
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/post_gallery_recycler"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             android:clipToPadding="false"
-            tools:listitem="@layout/item_post_list"
+            tools:listitem="@layout/item_post_gallery"
             >
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
+</RelativeLayout>
 
-
-</android.support.design.widget.CoordinatorLayout>
+    <!--</android.support.design.widget.CoordinatorLayout>-->
