Improve Galleries & fix some bugs

--- a/app/src/main/res/layout/activity_posts_list.xml
+++ b/app/src/main/res/layout/activity_posts_list.xml
@@ -13,8 +13,8 @@
         style="?android:attr/progressBarPadding"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginTop="60dp"
-        android:layout_gravity="center"
+        android:layout_marginBottom="100dp"
+        android:layout_gravity="bottom"
         />
     <!--style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"-->
 
