--- a/app/src/main/res/layout/activity_post_gallery.xml
+++ b/app/src/main/res/layout/activity_post_gallery.xml
@@ -6,17 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <!--tools:context="com.awoisoak.visor.presentation.postlist.PostsListActivity"-->
-    <!--android:fitsSystemWindows="true"-->
+
     <ProgressBar
         android:id="@+id/post_gallery_progress_bar"
         style="?android:attr/progressBarPadding"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginTop="60dp"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="100dp"
         />
-    <!--style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"-->
 
 
     <android.support.design.widget.AppBarLayout
@@ -26,24 +24,28 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/post_gallery_collapsing_toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|snap"
-            >
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/post_gallery_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/posts_gallery_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:fontFamily="casual"
+                    android:gravity="center_horizontal"
+                    android:textSize="30sp"
+                    />
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
-        <ImageView
-            android:id="@+id/post_gallery_map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:scaleType="fitCenter"
-            app:layout_scrollFlags="scroll"
-            android:src="@drawable/map_visited_countries"
-            />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -59,7 +61,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:clipToPadding="false"
-            tools:listitem="@layout/item_post_list"
+            tools:listitem="@layout/item_post_gallery"
             >
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
