--- a/app/src/main/res/layout/activity_post_gallery.xml
+++ b/app/src/main/res/layout/activity_post_gallery.xml
@@ -38,7 +38,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-                    android:fontFamily="casual"
+                    style="@style/VisorTheme"
                     android:gravity="center_horizontal"
                     android:textSize="30sp"
                     />
