--- a/app/src/main/res/layout/item_post_gallery.xml
+++ b/app/src/main/res/layout/item_post_gallery.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:contextClickable="true"
-    android:layout_height="275dp"
+    android:layout_height="270dp"
     android:layout_width="match_parent"
     android:textAlignment="center"
     >
@@ -10,7 +10,8 @@
         android:id="@+id/item_post_gallery_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        />
         />
 </android.support.v7.widget.CardView>
 
