--- a/app/src/main/res/layout/item_post_list.xml
+++ b/app/src/main/res/layout/item_post_list.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textColor="@color/white"
-        android:fontFamily="casual"
+        style="@style/VisorTheme"
         android:textSize="20sp"
         android:textStyle="bold"
         />
