--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,9 +12,8 @@
         <item name="android:textColor">@color/text_color_primary</item>
         <item name="android:buttonStyle">@color/text_color_primary</item>
         <item name="android:textColorHighlight">@color/orange</item>
+        <item name="android:fontFamily">casual</item>
     </style>
-
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
