--- a/app/src/main/res/layout/activity_post_gallery.xml
+++ b/app/src/main/res/layout/activity_post_gallery.xml
@@ -39,8 +39,8 @@
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
                     style="@style/VisorTheme"
-                    android:gravity="center_horizontal"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_horizontal"
                     />
 
             </android.support.v7.widget.Toolbar>
