--- a/app/src/main/res/layout/item_post_list.xml
+++ b/app/src/main/res/layout/item_post_list.xml
@@ -2,44 +2,36 @@
 
 
 <android.support.v7.widget.CardView
+    style="@style/VisorTheme.Button"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contextClickable="true"
-    android:layout_height="200dp"
     android:layout_width="match_parent"
+    android:layout_height="200dp"
+    android:contextClickable="true"
+    android:elevation="50dp"
     android:textAlignment="center"
-   >
-    <!--android:foreground="?attr/selectableItemBackground"-->
 
+    >
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:orientation="vertical">-->
 
     <TextView
-        android:elevation="10dp"
         android:id="@+id/item_post_title"
-        android:layout_gravity="bottom|center"
-        android:layout_height="wrap_content"
+        style="@style/VisorTheme.Tag"
         android:layout_width="wrap_content"
-        android:textColor="@color/white"
-        style="@style/VisorTheme"
-        android:textSize="20sp"
-        android:textStyle="bold"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:elevation="10dp"
+        android:text="Carpe Diem"
         />
+
 
     <ImageView
         android:id="@+id/item_post_image"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scaleType="centerCrop"
         />
-    <!--android:adjustViewBounds="true" trying to fix the aspect ratio-->
-
-
-    <!--</LinearLayout>-->
-
-    <!--android:layout_marginBottom="@dime"-->
 
 
 </android.support.v7.widget.CardView>
