--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,19 @@
         <item name="android:textColorHighlight">@color/orange</item>
         <item name="android:fontFamily">casual</item>
     </style>
+
+    <style name="VisorTheme.Button" parent="Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:textColor">@color/text_color_primary</item>
+        <!--<item name="android:background">@drawable/place_holder_black</item>-->
+    </style>
+
+    <style name="VisorTheme.Tag" >
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/round_shape</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
