--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/red</item>
-        <item name="android:windowBackground">@color/wallet_background</item>
+        <item name="android:windowBackground">@color/black</item>
         <item name="android:textColor">@color/text_color_primary</item>
         <item name="android:buttonStyle">@color/text_color_primary</item>
         <item name="android:textColorHighlight">@color/orange</item>
@@ -17,7 +17,6 @@
 
     <style name="VisorTheme.Button" parent="Widget.AppCompat.Button.Borderless.Colored">
         <item name="android:textColor">@color/text_color_primary</item>
-        <!--<item name="android:background">@drawable/place_holder_black</item>-->
     </style>
 
     <style name="VisorTheme.Tag" >
