Blog Entry feature in WebView implemented
Now, inside the blog galleries, there is a floating action button that will open a webview with the blog entry content. All links included in the webview will be managed externally.

--- a/app/src/main/res/layout/activity_post_gallery.xml
+++ b/app/src/main/res/layout/activity_post_gallery.xml
@@ -73,5 +73,15 @@
         </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/post_gallery_floating_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/ic_import_contacts_white_48dp"
+        />
+
 
 </android.support.design.widget.CoordinatorLayout>
